implement language settings

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -6,8 +6,10 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-  --primary-bg-color: #38b51c;
+  --primary-bg-color: #36c416cc;
   --text-color-100: white;
+  --bg-color-100: white;
+  --bg-gradient: linear-gradient(90deg, hsla(109, 73%, 41%, 1) 92%, hsla(210, 81%, 22%, 1) 100%);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -15,8 +17,10 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
-    --primary-bg-color: #38b51c;
+    --primary-bg-color: #36c416cc;
     --text-color-100: white;
+    --bg-color-100: white;
+    --bg-gradient: linear-gradient(90deg, hsla(109, 73%, 41%, 1) 92%, hsla(210, 81%, 22%, 1) 100%);
   }
 }
 
